# cmpt433_as2

./: CMakeLists.txt  NetCatOutput.txt  README.md  as2-gdb.txt  as2UdpGui.py  noworky.c
app/: CMakeLists.txt
app/src/: main.c
hal/include/hal/: dipCounter.h  display.h  dummy.h  led.h  lsensor.h  sampler.h  shared.h  terminalPrint.h  udp.h  udpMessages.h
hal/src/: dipCounter.c  display.c  led.c  lsensor.c  sampler.c  shared.c  terminalPrint.c  udp.c  udpMessages.c
